# yew-example

./: Cargo.toml  README.md
src/: lib.rs  reqs.rs
src/components/: main.rs  mod.rs
src/components/views/: documentation.rs  home.rs  mod.rs
static/: index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
