[package]
name = "yew-app"
version = "0.1.0"
authors = ["Yew App Developer <name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true

[dependencies]
yew = "0.18.0"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
getrandom = { version = "0.2.3", features = ["js"] }
reqwest = "0.11.3"